# corda

./: .gitignore  ENT-5140__Tighten_network_parameters_checks.patch  build.gradle  constants.properties  gradle.properties  memoryUsageMonitor.gradle  settings.gradle
basic-types/: build.gradle
buildSrc/: build.gradle
business-networks/: build.gradle
business-networks/contracts/: build.gradle
business-networks/custom-contracts/: build.gradle
business-networks/custom-workflows/: build.gradle
business-networks/workflows/: build.gradle
client/jackson/: build.gradle
client/jfx/: build.gradle
client/mock/: build.gradle
client/rpc/: build.gradle
common/logging/: build.gradle
confidential-identities/: build.gradle
cordapp-api/: build.gradle
core/: build.gradle
core-deterministic/: build.gradle
core-node/: build.gradle
core-tests/: build.gradle
core-types/: build.gradle
detekt-plugins/: build.gradle
docker/: build.gradle
docs/: build.gradle
experimental/: build.gradle
experimental/cordacpp/: CMakeLists.txt  README.md  build.gradle  corda-core.cpp  corda-core.h  corda-serialization.cpp  corda-serialization.h  main.cpp
experimental/cordacpp/src/main/kotlin/net/corda/tools/serialization/: GenerateCPP.kt
isolated/: build.gradle
jdk8u-deterministic/: build.gradle
node/: build.gradle
node-api/: build.gradle
node-api-tests/: build.gradle
serialization/: EnumTests.toStringEnum  build.gradle
serialization-deterministic/: build.gradle
serialization-djvm/: build.gradle
serialization-tests/: build.gradle
sgx/: deps.txt
(+1101 files in other folders)
